--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
     }
 
     .nav-link {
-        @apply mx-8 font-medium text-neutral-100 hover:text-neutral-400 transition-all duration-300 ease-in;
+        @apply mx-4 font-medium text-huasteca-orange hover:text-neutral-100 transition-all duration-200 ease-in;
+    }
+
+    .mobile-link {
+        @apply text-sm md:text-lg text-huasteca-orange font-medium hover:text-neutral-100 duration-200 transition-all flex items-center;
     }
 }
